Additional China Work + Fixed Generals CTD

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -3,3 +3,7 @@
   PBNews.1.t:0 "The London Stock Crisis"
   PBNews.1.d:0 "Britain's economic stagnation has finally come to a head. The sudden collapse of the country's investment bubble sparked a panic throughout the British economy, leading to mass panic sales and several of Britain's major Imperial Corporations going under.\n\nMillions have been left unemployed virtually overnight and the British economy is in shambles, sending shockwaves throughout the Imperial Confederation and Britain's few economic partners."
   PBNews.1.a:0 "What does this mean for the Empire?"
+
+  PBNews.2.t:0 "The Arab War of Succession"
+  PBNews.2.d:0 "With the death of Ali bin Hussein, Emir of the United Arab Emirates, his line of succession has been disputed. The long running rivalry between the Hashemites and Rashidis has finally erupted into open violence. Claiming legitimacy to the throne, both factions have armed themselves and prepared to seize control.\n\nWith the Middle East in chaos, many observers fear that the ongoing conflicts might foster the rise of new, radical threats to the old order."
+  PBNews.2.a:0 "The fate of Arabia is at stake"
