--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -77,3 +77,103 @@
  BWN_Insurgency_ds_ADJ:0 "New African"
  BWN_Insurgency_cn_ADJ:0 "New African"
  BWN_Insurgency_an_ADJ:0 "New African"
+
+ UAR_Insurgency_ni:0 "Revolutionary Arabia"
+ UAR_Insurgency_ni_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_ds:0 "Revolutionary Arabia"
+ UAR_Insurgency_ds_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_rc:0 "Revolutionary Arabia"
+ UAR_Insurgency_rc_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_an:0 "Revolutionary Arabia"
+ UAR_Insurgency_an_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_cn:0 "Revolutionary Arabia"
+ UAR_Insurgency_cn_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_lb:0 "Revolutionary Arabia"
+ UAR_Insurgency_lb_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_ss:0 "Revolutionary Arabia"
+ UAR_Insurgency_ss_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_jc:0 "Revolutionary Arabia"
+ UAR_Insurgency_jc_DEF:0 "Revolutionary Arabia"
+ UAR_Insurgency_ni_ADJ:0 "Arab"
+ UAR_Insurgency_rc_ADJ:0 "Arab"
+ UAR_Insurgency_lb_ADJ:0 "Arab"
+ UAR_Insurgency_ss_ADJ:0 "Arab"
+ UAR_Insurgency_jc_ADJ:0 "Arab"
+ UAR_Insurgency_ds_ADJ:0 "Arab"
+ UAR_Insurgency_cn_ADJ:0 "Arab"
+ UAR_Insurgency_an_ADJ:0 "Arab"
+
+ IKW_Insurgency_ni:0 "Holy Army of Arabia"
+ IKW_Insurgency_ni_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_ds:0 "Holy Army of Arabia"
+ IKW_Insurgency_ds_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_rc:0 "Holy Army of Arabia"
+ IKW_Insurgency_rc_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_an:0 "Holy Army of Arabia"
+ IKW_Insurgency_an_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_cn:0 "Holy Army of Arabia"
+ IKW_Insurgency_cn_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_lb:0 "Holy Army of Arabia"
+ IKW_Insurgency_lb_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_ss:0 "Holy Army of Arabia"
+ IKW_Insurgency_ss_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_jc:0 "Holy Army of Arabia"
+ IKW_Insurgency_jc_DEF:0 "Holy Army of Arabia"
+ IKW_Insurgency_ni_ADJ:0 "Arab"
+ IKW_Insurgency_rc_ADJ:0 "Arab"
+ IKW_Insurgency_lb_ADJ:0 "Arab"
+ IKW_Insurgency_ss_ADJ:0 "Arab"
+ IKW_Insurgency_jc_ADJ:0 "Arab"
+ IKW_Insurgency_ds_ADJ:0 "Arab"
+ IKW_Insurgency_cn_ADJ:0 "Arab"
+ IKW_Insurgency_an_ADJ:0 "Arab"
+
+ JBS_Succession_ni:0 "Rashidi Arabia"
+ JBS_Succession_ni_DEF:0 "Rashidi Arabia"
+ JBS_Succession_ds:0 "Rashidi Arabia"
+ JBS_Succession_ds_DEF:0 "Rashidi Arabia"
+ JBS_Succession_rc:0 "Rashidi Arabia"
+ JBS_Succession_rc_DEF:0 "Rashidi Arabia"
+ JBS_Succession_an:0 "Rashidi Arabia"
+ JBS_Succession_an_DEF:0 "Rashidi Arabia"
+ JBS_Succession_cn:0 "Rashidi Arabia"
+ JBS_Succession_cn_DEF:0 "Rashidi Arabia"
+ JBS_Succession_lb:0 "Rashidi Arabia"
+ JBS_Succession_lb_DEF:0 "Rashidi Arabia"
+ JBS_Succession_ss:0 "Rashidi Arabia"
+ JBS_Succession_ss_DEF:0 "Rashidi Arabia"
+ JBS_Succession_jc:0 "Rashidi Arabia"
+ JBS_Succession_jc_DEF:0 "Rashidi Arabia"
+ JBS_Succession_ni_ADJ:0 "Arab"
+ JBS_Succession_rc_ADJ:0 "Arab"
+ JBS_Succession_lb_ADJ:0 "Arab"
+ JBS_Succession_ss_ADJ:0 "Arab"
+ JBS_Succession_jc_ADJ:0 "Arab"
+ JBS_Succession_ds_ADJ:0 "Arab"
+ JBS_Succession_cn_ADJ:0 "Arab"
+ JBS_Succession_an_ADJ:0 "Arab"
+
+ HEJ_Succession_ni:0 "Hashemite Arabia"
+ HEJ_Succession_ni_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_ds:0 "Hashemite Arabia"
+ HEJ_Succession_ds_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_rc:0 "Hashemite Arabia"
+ HEJ_Succession_rc_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_an:0 "Hashemite Arabia"
+ HEJ_Succession_an_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_cn:0 "Hashemite Arabia"
+ HEJ_Succession_cn_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_lb:0 "Hashemite Arabia"
+ HEJ_Succession_lb_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_ss:0 "Hashemite Arabia"
+ HEJ_Succession_ss_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_jc:0 "Hashemite Arabia"
+ HEJ_Succession_jc_DEF:0 "Hashemite Arabia"
+ HEJ_Succession_ni_ADJ:0 "Arab"
+ HEJ_Succession_rc_ADJ:0 "Arab"
+ HEJ_Succession_lb_ADJ:0 "Arab"
+ HEJ_Succession_ss_ADJ:0 "Arab"
+ HEJ_Succession_jc_ADJ:0 "Arab"
+ HEJ_Succession_ds_ADJ:0 "Arab"
+ HEJ_Succession_cn_ADJ:0 "Arab"
+ HEJ_Succession_an_ADJ:0 "Arab"
