--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -851,22 +851,22 @@
  DAF_cn_ADJ:0 "German-African"
  DAF_an_ADJ:0 "German-African"
 
- PRE_ni:0 "Dutch Pretoria"
- PRE_ni_DEF:0 "Dutch Pretoria"
- PRE_ds:0 "Dutch Pretoria"
- PRE_ds_DEF:0 "Dutch Pretoria"
- PRE_rc:0 "Dutch Pretoria"
- PRE_rc_DEF:0 "Dutch Pretoria"
- PRE_an:0 "Dutch Pretoria "
- PRE_an_DEF:0 "Dutch Pretoria"
- PRE_cn:0 "Dutch Pretoria"
- PRE_cn_DEF:0 "Dutch Pretoria"
- PRE_lb:0 "Dutch Pretoria"
- PRE_lb_DEF:0 "Dutch Pretoria"
- PRE_ss:0 "Dutch Pretoria"
- PRE_ss_DEF:0 "Dutch Pretoria"
- PRE_jc:0 "Dutch Pretoria"
- PRE_jc_DEF:0 "Dutch Pretoria"
+ PRE_ni:0 "Kaapkolonie"
+ PRE_ni_DEF:0 "Kaapkolonie"
+ PRE_ds:0 "Kaapkolonie"
+ PRE_ds_DEF:0 "Kaapkolonie"
+ PRE_rc:0 "Kaapkolonie"
+ PRE_rc_DEF:0 "Kaapkolonie"
+ PRE_an:0 "Kaapkolonie "
+ PRE_an_DEF:0 "Kaapkolonie"
+ PRE_cn:0 "Kaapkolonie"
+ PRE_cn_DEF:0 "Kaapkolonie"
+ PRE_lb:0 "Kaapkolonie"
+ PRE_lb_DEF:0 "Kaapkolonie"
+ PRE_ss:0 "Kaapkolonie"
+ PRE_ss_DEF:0 "Kaapkolonie"
+ PRE_jc:0 "Kaapkolonie"
+ PRE_jc_DEF:0 "Kaapkolonie"
  PRE_ni_ADJ:0 "Afrikaner"
  PRE_rc_ADJ:0 "Afrikaner"
  PRE_lb_ADJ:0 "Afrikaner"
@@ -3670,6 +3670,56 @@ SAN_jc:0 "Sanghli State"
  BWN_ds_ADJ:0 "New African"
  BWN_cn_ADJ:0 "New African"
  BWN_an_ADJ:0 "New African"
+
+ UAR_ni:0 "United Arab Republic"
+ UAR_ni_DEF:0 "United Arab Republic"
+ UAR_ds:0 "United Arab Republic"
+ UAR_ds_DEF:0 "United Arab Republic"
+ UAR_rc:0 "United Arab Republic"
+ UAR_rc_DEF:0 "United Arab Republic"
+ UAR_an:0 "United Arab Republic"
+ UAR_an_DEF:0 "United Arab Republic"
+ UAR_cn:0 "United Arab Republic"
+ UAR_cn_DEF:0 "United Arab Republic"
+ UAR_lb:0 "United Arab Republic"
+ UAR_lb_DEF:0 "United Arab Republic"
+ UAR_ss:0 "United Arab Republic"
+ UAR_ss_DEF:0 "United Arab Republic"
+ UAR_jc:0 "United Arab Republic"
+ UAR_jc_DEF:0 "United Arab Republic"
+ UAR_ni_ADJ:0 "Arab"
+ UAR_rc_ADJ:0 "Arab"
+ UAR_lb_ADJ:0 "Arab"
+ UAR_ss_ADJ:0 "Arab"
+ UAR_jc_ADJ:0 "Arab"
+ UAR_ds_ADJ:0 "Arab"
+ UAR_cn_ADJ:0 "Arab"
+ UAR_an_ADJ:0 "Arab"
+
+ IKW_ni:0 "Grand Arab Caliphate"
+ IKW_ni_DEF:0 "Grand Arab Caliphate"
+ IKW_ds:0 "Grand Arab Caliphate"
+ IKW_ds_DEF:0 "Grand Arab Caliphate"
+ IKW_rc:0 "Grand Arab Caliphate"
+ IKW_rc_DEF:0 "Grand Arab Caliphate"
+ IKW_an:0 "Grand Arab Caliphate"
+ IKW_an_DEF:0 "Grand Arab Caliphate"
+ IKW_cn:0 "Grand Arab Caliphate"
+ IKW_cn_DEF:0 "Grand Arab Caliphate"
+ IKW_lb:0 "Grand Arab Caliphate"
+ IKW_lb_DEF:0 "Grand Arab Caliphate"
+ IKW_ss:0 "Grand Arab Caliphate"
+ IKW_ss_DEF:0 "Grand Arab Caliphate"
+ IKW_jc:0 "Grand Arab Caliphate"
+ IKW_jc_DEF:0 "Grand Arab Caliphate"
+ IKW_ni_ADJ:0 "Arab"
+ IKW_rc_ADJ:0 "Arab"
+ IKW_lb_ADJ:0 "Arab"
+ IKW_ss_ADJ:0 "Arab"
+ IKW_jc_ADJ:0 "Arab"
+ IKW_ds_ADJ:0 "Arab"
+ IKW_cn_ADJ:0 "Arab"
+ IKW_an_ADJ:0 "Arab"
 ###################################
 # TEMPLATE
 ###################################
