More Polish Content

--- a/localisation/PB_Poland_l_english.yml
+++ b/localisation/PB_Poland_l_english.yml
@@ -23,6 +23,27 @@ POL_an:0 "Congress Poland"
 POL_ss:0 "Congress Poland"
 POL_jc:0 "Congress Poland"
 
+  ##########################
+  # EVENTS
+  ##########################
+pol.1.t:0 "Poland in Chains"
+pol.1.d:0 ""
+pol.1.a:0 ""
+pol.2.t:0 "The Governor"
+pol.2.d:0 ""
+pol.2.a:0 ""
+pol.3.t:0 "The Marshal"
+pol.3.d:0 ""
+pol.3.a:0 ""
+pol.4.t:0 "The Nationalist"
+pol.4.d:0 ""
+pol.4.a:0 ""
+pol.5.t:0 "Winner Takes All"
+pol.5.d:0 ""
+pol.5.a:0 ""
+pol.5.b:0 ""
+pol.5.c:0 ""
+
 
 
 
