Several Military Leaders Added

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -305,6 +305,17 @@ spain.35.a:0 "Nothing great, I tell you"
 spain.36.t:0 "National Movement disbanded"
 spain.36.d:0 "After the shocking results of the recent final vote, Spain is paralyzed by confusion. Seizing their opportunity, both the carlists and the falangists have declared the movement a complete failure and have personally abolished the movement, with the RE and the CEDA having no choice in the matter. This disbanding of the movement can surely only lead to catastrophe."
 spain.36.a:0 "Great...."
+spain.37.t:0 "Basque Train stopped by Spanish Border"
+spain.37.d:0 "This morning, a train originating from Bilbao, the Basque capital, was stopped by Spanish border forces for inspection. In recent years, Spain has had a rather big problem with Basque people in Spain fleeing to the Basque Republic on trains and planes. Border forces are thus ordered to inspect every train that goes to Zaragoza and other surrounding cities and comes back to Bilbao. This time, in a surprising twist, our inspection forces found a batch of Basque men with guns in this particular train. Seconds after this discovery, the train went on its way, with ten of our border forces being killed and 23 wounded, dying on the rocky ground."
+spain.37.a:0 "They will pay"
+spain.38.t:0 "Ultimatum Drafted for the Basque Republic"
+spain.38.d:0 "After the recent Basque train incident, several politicians in Madrid have stirred up the city for revenge. Many falangists and alfonsists have started to petition the government to send an ultimatum to the Basque Republic, demanding the right to investigate the incident and let the police have free reign in Bilbao for the supposed investigation. Many inside the leadership now that accepting such a demand would be equal to giving up independence to Spain and not accepting such a request would thus give Spain a great opportunity to invade the Basque Republic."
+spain.38.a:0 "Let's send that ultimatum!"
+
+
+
+
+
 
   ##########################
   # Decisions
