Fixed all supply area errors plus some state names being broken

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -823,14 +823,14 @@
  STATE_822:0 "Canakkale"
  STATE_823:0 "Aydin"
  STATE_824:0 "Danish Antilles"
+ STATE_825:0 "Limoges"
  STATE_826:0 "Port-Philippe"
  STATE_827:0 "Acre"
  STATE_828:0 "Acrean Amazonas"
  STATE_829:0 "Granadan Amazonas"
  STATE_830:0 "Goias do Sul"
- STATE_825:0 "STATE_825\" STATE_831:1 \"Nice"
- STATE_832:1 "Upper Savoy"
- STATE_831:0 "STATE_831"
+ STATE_831:0 "Nice"
+ STATE_832:0 "Upper Savoy"
  STATE_833:0 "Southern Abruzzo"
  STATE_834:0 "Parma"
  STATE_835:0 "Modena"
@@ -843,7 +843,8 @@
  STATE_842:0 "Alaba"
  STATE_843:0 "Balasor"
  STATE_844:0 "Bom Bahia"
- STATE_845:0 "Diu\" STATE_846:0 \"Goa"
+ STATE_845:0 "Diu"
+ STATE_846:0 "Goa"
  STATE_847:0 "Karnataka"
  STATE_848:0 "Pulicat"
  STATE_849:0 "Travancore"
@@ -851,4 +852,5 @@
  STATE_850:0 "Madras"
  STATE_851:0 "Hughli"
  STATE_852:0 "Sanghli"
- STATE_853:0 "Sikkim" STATE_854:0 "Surate"
+ STATE_853:0 "Sikkim" 
+ STATE_854:0 "Surate"
