whole lot of portraits, start of the Romanian tree and finalized the Italian foreign diplomacy tree

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -322,6 +322,23 @@ ITA_bombing_run_tactics:0 "Bombing Run Tactics"
 ITA_easier_flight_instructions:0 "Simplify Fighter Training"
 ITA_royal_army_of_italy:0 "Royal Italian Armed Forces"
 ITA_royal_airforce_of_italy:0 "Royal Italian Airforce"
+ITA_go_with_the_french:0 "The Ally we Already Know"
+ITA_continue_our_british_status_quo:0 "The Ally we Already Love"
+ITA_go_with_the_french_desc:0 "France, our former ally during the Great War and home of the Bourbon dynasty, is for many in the court the only diplomatic guarantee Italy has to continue its global importance. Having many ties with Paris and Marseille, France and Italy are like bread and butter: they naturally belong together!"
+ITA_continue_our_british_status_quo_desc:0 "Britain, the enemy the court fought during the Great War, was also the loved ally of the people of Italy, as many of the people are still inspired by its liberal democracy Britain has been known for. While some are questioning the British hegemony in this world and how long this will last, the populace still supports Britain as our ally in this world."
+ITA_mediate_the_savoy_border:0 "The Grenoble Congress"
+ITA_fire_disloyal_ministers:0 "Fire Opposing Ministers"
+ITA_allow_french_troops:0 "Join the Pact"
+ITA_appoint_french_commanders:0 "Invite French Intellectuals"
+ITA_italy_on_the_world_stage:0 "Our Own Peace"
+ITA_debate_malta:0 "The Issue of Malta"
+ITA_act_of_normality:0 "The Anti-Radicalism Reforms"
+ITA_learn_from_british_aces:0 "Tea with Bowman"
+ITA_member_of_the_entente:0 "Honorable Ally of Britain"
+ITA_counter_german_influence:0 "Combat Barbarism"
+ITA_croatian_intervention:0 "The War for Dalmatia"
+
+
 #################
 #Decisions
 ############
