--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3574,7 +3574,7 @@ MDR_ds:0 "Mandate of the Carnatic"
 MDR_rc:0 "Mandate of the Carnatic"
 MDR_an:0 "Mandate of the Carnatic"
 MDR_cn:0 "Mandate of the Carnatic"
-MDR_lb:0 "Tamil Nadu Republic"
+MDR_lb:0 "Mandate of the Carnatic"
 MDR_ss:0 "Tamil Nadu Republic"
 MDR_jc:0 "Tamil Nadu Republic"
 
