GFX Work and Other

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -24,95 +24,34 @@
   ##########################
   # FOCUSES
   ##########################
-  PB_GER_Stresemann_Reforms:0 "Continue the Stresemann Reforms"
-  PB_GER_WPA:0 "Works-Fortschrittsverwaltung"
-  PB_GER_Infrastructure_Boom:0 "Dramatic Infrastructure Plans"
-  PB_GER_Union_Diplomacy:0 "Reach out to the Unions"
-  PB_GER_Limited_Economic_Planning:0 "Limited Economic Planning"
-  PB_GER_Strike_at_Unemployment:0 "End the Unemployment Crisis"
-  PB_GER_Restore_Market_Confidence:0 "Restore Confidence in the Market"
-  PB_GER_The_German_Miracle:0 "The German Miracle"
-  PB_GER_Encourage_Ruhr_Industry:0 "Expand Industry in the Ruhr"
-  PB_GER_Electrification_Campaign:0 "Electrify the Nation"
-  PB_GER_Vienna_Technical_Institute:0 "The Vienna Technical Institute"
-  PB_GER_Mining_Plan:0 "Blood and Iron"
-  PB_GER_German_Farms:0 "Expand German Farming"
-  PB_GER_Bavarian_Arms_Explosion:0 "Bavarian Arms Industry"
-  PB_GER_Paneuropean_Research:0 "Pan-European Research Committee"
-  PB_GER_Fireside_Chats:0 "Kamingespräche"
+  PB_GER_Rudolf_Crisis:0 "The Abdication Crisis"
+  PB_GER_Woman_I_Love:0 "...the Support of the Woman I Love..."
+  PB_GER_New_Kaiserin:0 "The Kaiserin of the People"
+  PB_GER_Bundestag_Reforms:0 "Reforms in the Bundestag"
+  PB_GER_Populist_Reforms:0 "Populist Reforms"
+  PB_GER_Stresemann_Reforms:0 "Continue Stresemann's Reforms"
+  PB_GER_Expand_Welfare:0 "Expand the Welfare State"
+  PB_GER_Expand_Universities:0 "Expand the Universities"
+  PB_GER_Collective_Housing:0 "Collective Housing"
+  PB_GER_Agriculture_Reforms:0 "Subsidize Agriculture"
+  PB_GER_Wrangle_the_Autonomies:0 "Wrangle the Autonomies"
+  PB_GER_Standardize_the_Judiciaries:0 "Standardize the Judiciaries"
+  PB_GER_Improved_Labour_Laws:0 "Improved Labour Laws"
+  PB_GER_Dam_the_Rhine:0 "Dam the Upper Rhine"
+  PB_GER_Trade_Union_Cooperation:0 "Work with the Trade Unions"
+  PB_GER_Empower_the_Unions:0 "Empower the Trade Unions"
+  PB_GER_Bavaria_Full_Control:0 "End Bavarian Unrest"
+  PB_GER_Rhineland_Full_Control:0 "End Rhenish Unrest"
+  PB_GER_National_Healthcare:0 "National Healthcare"
+  PB_GER_German_Industry:0 "German Industry"
+  PB_GER_Peoples_Germany:0 "A Germany That Works for All of Us"
+  PB_GER_Saxony_Full_Control:0 "End Saxon Unrest"
+  PB_GER_Hannover_Full_Control:0 "End Hannoverian Unrest"
+  PB_GER_Brandenburg_Full_Control:0 "End Brandenburger Unrest"
+  PB_GER_Womens_Suffrage:0 "Women's Suffrage"
   PB_GER_Beacon_of_Industry:0 "A Beacon of Industry"
-  PB_GER_Civilian_Factories:0 "Expand Civilian Industry"
-  PB_GER_Military_Factories:0 "Military Industrial Complex"
-  PB_GER_Beacon_of_Science:0 "A Beacon of Knowledge"
-  PB_GER_Beacon_of_Europe:0 "A Beacon of Militarism"
-
-  PB_GER_New_Blood:0 "It's Time for New Blood"
-  PB_GER_Zentrum:0 "Zentrum at the Helm"
-  PB_GER_Welfare_Reform:0 "Expand the Welfare State"
-  PB_GER_Banking_Reforms:0 "Reform the National Bank"
-  PB_GER_Cooperate_with_Capitalists:0 "Cooperate with the Capitalists"
-
-  PB_GER_National_Liberals:0 "Nationalliberale Partei"
-  PB_GER_Colonial_Reliance:0 "Lean on the Colonies"
-  PB_GER_Tax_Cuts:0 "Slash Corporate Taxes"
-  PB_GER_Economic_Protectionism:0 "Economic Protectionism"
-
-  PB_GER_Revise_Tours:0 "Revise the Treaty of Tours"
-  PB_GER_National_Gaurd:0 "Revive the Hauptwache"
-  PB_GER_Franz_Joseph_Line:0 "Reactivate the Franz Joseph Line"
-  PB_GER_Reinstate_Conscription:0 "Reinstate Conscription"
-  PB_GER_Prepare_for_the_Worst:0 "Prepare for the Worst"
-
-  PB_GER_Watch_on_the_Rhine:0 "The Watchman on the Rhine"
-  PB_GER_Home_Defense:0 "Home Defense"
-  PB_GER_Old_Order:0 "Defend the Old Order"
-  PB_GER_Secure_Scandinavia:0 "Secure Scandinavia"
-  PB_GER_Secure_Low_Countries:0 "Secure the Low Countries"
-  PB_GER_Secure_Balkans:0 "Secure the Balkans"
-  PB_GER_Stockholm_Foreign_Mission:0 "Offer German Military Support"
-  PB_GER_Supply_the_Dutch:0 "Supply the Dutch Army"
-  PB_GER_Reinforce_Indonesia:0 "Reinforce Indonesia"
-  PB_GER_Devil_You_Know:0 "The Devil We Know"
-  PB_GER_Strike_at_France:0 "Strike at France"
-
-  PB_GER_Appeasement:0 "Beschwichtigungspolitik"
-  PB_GER_Abandon_Wallonia:0 "Abandon Wallonia"
-  PB_GER_Abandon_the_Dutch:0 "Save our own Skins"
-  PB_GER_Appeasement_Failure:0 "The Final Failure"
-
-  PB_GER_Empire_Management:0 "Revisitng Imperial Policy"
-  PB_GER_Develop_Central_Africa:0 "Develop Central Africa"
-  PB_GER_Develop_GPC:0 "Increase funding to the Pacific"
-  PB_GER_Increase_Production_Quotas:0 "Increase Production Quotas"
-  PB_GER_Fighting_Filipinos:0 "Fight the Filipino Insurrection"
-  PB_GER_Cash_Crops:0 "Encourage Cash Crops"
-  PB_GER_Pacific_Navy:0 "Improve our Pacific Stations"
-  PB_GER_Encourage_Settlement:0 "Settlement Incentives"
-  PB_GER_Disenfranchise_Australian_French:0 "Reduce Australie's Autonomy"
-  PB_GER_Cut_off_Hands:0 "Expand Rubber Plantations"
-  PB_GER_Enforced_Germanization:0 "Enforce Germanization"
-  PB_GER_Native_Representation:0 "Limited Native Representation"
-  PB_GER_African_Education:0 "Instruct the Natives"
-  PB_GER_French_Exclusion_Laws:0 "French Exclusion Laws"
-  PB_GER_German_Superiority:0 "German Cultural Superiority"
-
-  PB_GER_Darkest_Hour:0 "Our Darkest Hour"
-  PB_GER_Take_Stock:0 "Take Stock of What's Left"
-  PB_GER_Rally_Exiles:0 "Rally the Exiles"
-  PB_GER_Colonial_Compromises:0 "Make some Compromises"
-  PB_GER_Keitel_Speech:0 "Keitel's Speech"
-  PB_GER_Free_German_Army:0 "The Free German Army"
-  PB_GER_Free_German_Navy:0 "The Free German Navy"
-  PB_GER_Free_German_Air:0 "The Free German Air Corps"
-  PB_GER_Fortress_Europe:0 "Break into Fortress Europe"
-  PB_GER_Resistance_Contacts:0 "Contact the Resistance"
-  PB_GER_Join_Allies:0 "Restore the Imperial Powers"
-  PB_GER_Universal_Conscription:0 "Every Man Must Do His Duty"
-  PB_GER_Great_Crusade:0 "The Great Crusade"
-  PB_GER_Territorial_Compromises:0 "Compromises for Assistance"
-  PB_GER_Armed_Women:0 "Break the Gender Stigma"
-  PB_GER_Improvised_Weapons:0 "Import Anything We Can"
-  PB_GER_Liberation:0 "The Liberation"
+  PB_GER_Beacon_of_Progress:0 "A Beacon of Progress"
+  PB_GER_Beacon_of_Unity:0 "A Beacon of Unity"
 
   ##########################
   # KINGDOMS MECHANIC
