Germany Focus Work

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -202,3 +202,53 @@
  CAL_USA_ds_ADJ:0 "Américan"
  CAL_USA_cn_ADJ:0 "Américan"
  CAL_USA_an_ADJ:0 "Américan"
+
+ BAL_RUS_ni:0 "Baltic Governate"
+ BAL_RUS_ni_DEF:0 "Baltic Governate"
+ BAL_RUS_ds:0 "Baltic Governate"
+ BAL_RUS_ds_DEF:0 "Baltic Governate"
+ BAL_RUS_rc:0 "Baltic Governate"
+ BAL_RUS_rc_DEF:0 "Baltic Governate"
+ BAL_RUS_an:0 "Baltic Governate"
+ BAL_RUS_an_DEF:0 "Baltic Governate"
+ BAL_RUS_cn:0 "Baltic Governate"
+ BAL_RUS_cn_DEF:0 "Baltic Governate"
+ BAL_RUS_lb:0 "Baltic Governate"
+ BAL_RUS_lb_DEF:0 "Baltic Governate"
+ BAL_RUS_ss:0 "Baltic Governate"
+ BAL_RUS_ss_DEF:0 "Baltic Governate"
+ BAL_RUS_jc:0 "Baltic Governate"
+ BAL_RUS_jc_DEF:0 "Baltic Governate"
+ BAL_RUS_ni_ADJ:0 "Baltic Russian"
+ BAL_RUS_rc_ADJ:0 "Baltic Russian"
+ BAL_RUS_lb_ADJ:0 "Baltic Russian"
+ BAL_RUS_ss_ADJ:0 "Baltic Russian"
+ BAL_RUS_jc_ADJ:0 "Baltic Russian"
+ BAL_RUS_ds_ADJ:0 "Baltic Russian"
+ BAL_RUS_cn_ADJ:0 "Baltic Russian"
+ BAL_RUS_an_ADJ:0 "Baltic Russian"
+
+ TRS_RUS_ni:0 "Caucasus Viceroyalty"
+ TRS_RUS_ni_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_ds:0 "Caucasus Viceroyalty"
+ TRS_RUS_ds_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_rc:0 "Caucasus Viceroyalty"
+ TRS_RUS_rc_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_an:0 "Caucasus Viceroyalty"
+ TRS_RUS_an_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_cn:0 "Caucasus Viceroyalty"
+ TRS_RUS_cn_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_lb:0 "Caucasus Viceroyalty"
+ TRS_RUS_lb_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_ss:0 "Caucasus Viceroyalty"
+ TRS_RUS_ss_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_jc:0 "Caucasus Viceroyalty"
+ TRS_RUS_jc_DEF:0 "Caucasus Viceroyalty"
+ TRS_RUS_ni_ADJ:0 "Caucasus Russian"
+ TRS_RUS_rc_ADJ:0 "Caucasus Russian"
+ TRS_RUS_lb_ADJ:0 "Caucasus Russian"
+ TRS_RUS_ss_ADJ:0 "Caucasus Russian"
+ TRS_RUS_jc_ADJ:0 "Caucasus Russian"
+ TRS_RUS_ds_ADJ:0 "Caucasus Russian"
+ TRS_RUS_cn_ADJ:0 "Caucasus Russian"
+ TRS_RUS_an_ADJ:0 "Caucasus Russian"
